--- a/css/style.css
+++ b/css/style.css
@@ -12157,14 +12157,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(1) {
   z-index: 10;
-  transform: rotate(1deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(1):before {
   content: "1";
 }
 .slyde:nth-child(1).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(1deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12179,56 +12179,12 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(2) {
   z-index: 9;
-  transform: rotate(3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(2):before {
   content: "2";
 }
 .slyde:nth-child(2).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(3deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(3) {
-  z-index: 8;
-  transform: rotate(-2deg) translate(-50%, -50%);
-}
-.slyde:nth-child(3):before {
-  content: "3";
-}
-.slyde:nth-child(3).leave {
-  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-2deg) translate(-50%, -15rem);
-  opacity: 0;
-  pointer-events: none;
-  filter: sepia(0%);
-}
-.slyde.active {
-  transform: rotate(0) translate(-50%, -50%);
-  filter: sepia(0%);
-}
-.slyde.active article {
-  opacity: 1;
-}
-
-.slyde:nth-child(4) {
-  z-index: 7;
-  transform: rotate(0deg) translate(-50%, -50%);
-}
-.slyde:nth-child(4):before {
-  content: "4";
-}
-.slyde:nth-child(4).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
   transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
@@ -12243,16 +12199,60 @@ Copyright (c) 2015 Daniel Eden
   opacity: 1;
 }
 
+.slyde:nth-child(3) {
+  z-index: 8;
+  transform: rotate(-4deg) translate(-50%, -50%);
+}
+.slyde:nth-child(3):before {
+  content: "3";
+}
+.slyde:nth-child(3).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(-4deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
+.slyde:nth-child(4) {
+  z-index: 7;
+  transform: rotate(2deg) translate(-50%, -50%);
+}
+.slyde:nth-child(4):before {
+  content: "4";
+}
+.slyde:nth-child(4).leave {
+  transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
+  transform: rotate(2deg) translate(-50%, -15rem);
+  opacity: 0;
+  pointer-events: none;
+  filter: sepia(0%);
+}
+.slyde.active {
+  transform: rotate(0) translate(-50%, -50%);
+  filter: sepia(0%);
+}
+.slyde.active article {
+  opacity: 1;
+}
+
 .slyde:nth-child(5) {
   z-index: 6;
-  transform: rotate(1deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(5):before {
   content: "5";
 }
 .slyde:nth-child(5).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(1deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12289,14 +12289,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(7) {
   z-index: 4;
-  transform: rotate(-3deg) translate(-50%, -50%);
+  transform: rotate(0deg) translate(-50%, -50%);
 }
 .slyde:nth-child(7):before {
   content: "7";
 }
 .slyde:nth-child(7).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-3deg) translate(-50%, -15rem);
+  transform: rotate(0deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12311,14 +12311,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(8) {
   z-index: 3;
-  transform: rotate(-2deg) translate(-50%, -50%);
+  transform: rotate(-1deg) translate(-50%, -50%);
 }
 .slyde:nth-child(8):before {
   content: "8";
 }
 .slyde:nth-child(8).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(-2deg) translate(-50%, -15rem);
+  transform: rotate(-1deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12333,14 +12333,14 @@ Copyright (c) 2015 Daniel Eden
 
 .slyde:nth-child(9) {
   z-index: 2;
-  transform: rotate(1deg) translate(-50%, -50%);
+  transform: rotate(-3deg) translate(-50%, -50%);
 }
 .slyde:nth-child(9):before {
   content: "9";
 }
 .slyde:nth-child(9).leave {
   transition: 0.5s transform ease-in-out, 0.5s opacity ease-in-out;
-  transform: rotate(1deg) translate(-50%, -15rem);
+  transform: rotate(-3deg) translate(-50%, -15rem);
   opacity: 0;
   pointer-events: none;
   filter: sepia(0%);
@@ -12728,10 +12728,10 @@ Copyright (c) 2015 Daniel Eden
 .header-style-one.header--sticky.style-white .container .row [class*=col] .header-wrapper-1 .logo-area .logo-large path {
   fill: white;
 }
-.header-style-one.header--sticky.style-white .nav-area nav ul li a {
+.header-style-one.header--sticky.style-white .container .row [class*=col] .header-wrapper-1 .nav-area nav ul li a {
   color: white;
 }
-.header-style-one.header--sticky.style-white .nav-area nav ul li .submenu li a {
+.header-style-one.header--sticky.style-white .container .row [class*=col] .header-wrapper-1 .nav-area nav ul li .submenu li a {
   color: var(--color-primary);
 }
 
@@ -12750,6 +12750,9 @@ Copyright (c) 2015 Daniel Eden
 }
 .header-style-one.header--sticky.sticky .container .row [class*=col] .header-wrapper-1 .nav-area nav ul li a {
   color: var(--color-primary);
+}
+.header-style-one.header--sticky.sticky .container .row [class*=col] .header-wrapper-1 .nav-area nav ul li.menu-item-open > a {
+  color: rgba(0, 92, 75, 0.7843137255) !important;
 }
 .header-style-one.header--sticky.sticky .container .row [class*=col] .header-wrapper-1 .button-area-right-header .header-btn {
   padding: 5px 14px;
@@ -20929,6 +20932,45 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   opacity: 1;
 }
 
+.pillock {
+  padding: 4px 16px;
+  display: flex;
+  gap: 10px;
+  max-width: max-content;
+  color: #262626;
+  border-radius: 32px;
+  border: 1px solid rgb(181, 181, 181);
+  text-decoration: none;
+  transition: all 0.15s ease;
+}
+.pillock .membership-application-icon {
+  width: 14px;
+  height: auto;
+}
+.pillock .membership-application-icon path {
+  fill: #d09d3a;
+}
+.pillock:hover {
+  background-color: white;
+  border-color: rgba(0, 100, 82, 0.7058823529);
+}
+
+.addendum {
+  padding-left: 3px;
+}
+.addendum .two-paragraphs {
+  border-left: 1.5px solid rgb(224, 224, 224);
+  padding-left: 24px;
+}
+.addendum .two-paragraphs p {
+  margin-bottom: 15px;
+  line-height: 143%;
+  color: #878787;
+}
+.addendum .two-paragraphs p:last-of-type {
+  margin-bottom: 0px;
+}
+
 .explainer-icon {
   width: 14px;
   height: auto;
@@ -21478,6 +21520,7 @@ table * {
 }
 table thead tr th {
   padding-bottom: 20px;
+  letter-spacing: 0.1px;
   font-family: "Alte Haas";
   -webkit-text-stroke: 0.3px;
   text-transform: capitalize;
@@ -21501,6 +21544,7 @@ table tbody tr th {
 }
 table tbody tr th .th-wrap {
   margin-top: auto;
+  letter-spacing: 0.1px;
   margin-bottom: auto;
   display: flex;
   flex-direction: row;
